gateway/tekton/trigger.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: el-atauth-gateway-listener
  namespace: tekton-pipelines
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    eventlistener: atauth-gateway-listener
